# felis

./: .gitignore  Cargo.toml  README.md  installer.sh
html/: html.html  test
kill-bin/: felis-kill-START.sh  felis-kill-STOP.sh  felis-kill-bin.sh
src/: config.rs  main.rs  toml_manipulation.rs
